Fix definition of efficient simulation

--- a/group1.tex
+++ b/group1.tex
@@ -61,9 +61,9 @@ model to our final sequential-access model.
   (Efficient simulation, after \cite{DBLP:conf/ershov/GurevichS89}.) A
   machine of some kind that is $T(n)$-time-bounded is said to be
   \emph{efficiently simulated} by some machine of another kind when
-  the simulating machine is time-bounded by a polynomial of $\log
-  T(n)$; that is, when the overhead of simulation is bounded by a
-  polylog function of $n$.
+  the simulating machine is time-bounded by $T(n)$ multiplied by a
+  polynomial of $\log T(n)$; that is, when the overhead of simulation
+  is bounded by a polylog function of $T(n)$.
 \end{defn}
 
 Although we start from a specific machine model, that of a
