--- a/group1.bib
+++ b/group1.bib
@@ -24,3 +24,22 @@
   isbn      = {3-540-51237-3},
   bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@article{Schnorr:1978:SQC:322047.322060,
+ author = {Schnorr, C. P.},
+ title = {Satisfiability Is Quasilinear Complete in {NQL}},
+ journal = {J. ACM},
+ issue_date = {Jan. 1978},
+ volume = {25},
+ number = {1},
+ month = jan,
+ year = {1978},
+ issn = {0004-5411},
+ pages = {136--145},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/322047.322060},
+ doi = {10.1145/322047.322060},
+ acmid = {322060},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
