--- a/group1.tex
+++ b/group1.tex
@@ -239,6 +239,10 @@ and finally we bring all the pieces together to show our main result.
 
 \subsection{Efficient sorting}
 
+This section is based on a lemma given in
+\cite{Schnorr:1978:SQC:322047.322060} as part of a proof that the
+graph isomorphism problem is in NQL.
+
 \begin{lem}
   \label{efficient-sorting-lemma}
   Let $L$ be a list containing $|L|$ natural numbers, and let $C(L)$
